--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Dev Harry Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style/style.css">
+
 
 </head>
 <body>
@@ -109,7 +110,7 @@
             <p id="sauceType">Sauce Type</p>
             <p id="toppings">Toppings</p>
             <p id="dineIn">Dining in?</p>
-            <p id="tip">Tip Amoount</p>
+            <p id="tip">Tip Amount</p>
             
           </h2>
         </div>
@@ -120,6 +121,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js'></script><script  src="./script.js"></script>
+<script src="./script/script.js"></script>
 
 </body>
 </html>
