--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <label class="form-check-label" for="Tomato"></label>
           </div>
           <div>
-          <input type="radio" class="form-check-input" id="deepDish" name="Sauce" value="Garlic" checked>Garlic
+          <input type="radio" class="form-check-input" id="garlic" name="Sauce" value="Garlic" checked>Garlic
             <label class="form-check-label" for="Garlic"></label>
             </div>
         </div>
@@ -91,10 +91,7 @@
      <div id="butnz">  
        <input id="btnSubmit" class="btn-primary" type="submit" value="Submit">
        <input id="btnClear" class="btn-primary" type="submit" value="Clear">
-      
-      </form> 
     </div>
-  </div>
 
   </div>
   
