--- a/index.html
+++ b/index.html
@@ -84,23 +84,21 @@
     <option selected>Select The Tip Amount Your Want</option>
     <option value="10">10% (Bad Service)</option>
     <option value="15">15% (Average Service)</option>
-    <option value="20">20% (I'm getting my nails done buy a 6 year old
-    )</option>
+    <option value="20">20% (I'm getting my nails done buy a 6 year old)</option>
   </select>
         <hr>
      <div id="butnz">  
        <input id="btnSubmit" class="btn-primary" type="submit" value="Submit">
        <input id="btnClear" class="btn-primary" type="submit" value="Clear">
     </div>
-
   </div>
+</form>
   
 <!--   Submitted order -->
   <div class="container col-md-4 pt-5 text-center" id="submited">
     <h1> Submitted Order </h1>
     <div class="container">
       <div class="col">
-        <div class=class="col-md-6 card mt-4 offset-md-3">
           <h2>
             <p id="orderName">@PuppyHomies</p>
             <p id="crustType">Crust Type</p>
@@ -110,7 +108,6 @@
             <p id="tip">Tip Amount</p>
             
           </h2>
-        </div>
       </div>
     </div>
   </div>
