--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
   </div>
   </div>
-<!-- partial -->
+<!-- javascript -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js'></script><script  src="./script.js"></script>
