--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         
     <!-- dropdown Tip amount-->    
   <select id="tipSelector" class="form-select" aria-label="Default select example">
-    <option selected>Select The Tip Amount Your Want</option>
+    <option selected>Select The Tip Amount You Want</option>
     <option value="10">10% (Bad Service)</option>
     <option value="15">15% (Average Service)</option>
     <option value="20">20% (I'm getting my nails done buy a 6 year old)</option>
@@ -89,6 +89,7 @@
      <div id="butnz">  
        <input id="btnSubmit" class="btn-primary" type="submit" value="Submit">
        <input id="btnClear" class="btn-primary" type="submit" value="Clear">
+       <input id="btnPrevOrder" class="btn-primary" type="submit" value="Load Order">
     </div>
   </div>
   </div>
